force-app/main/default/objects/Parker_Pen__c/Parker_Pen__c.object-meta.xml
<CustomObject>
    <label>Parker Pen</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parker Pens</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>