force-app/main/default/objects/Parker_Pen__c/fields/Discount_info__c.field-meta.xml
<CustomField>
    <fullName>Discount_info__c</fullName>
    <label>Discount info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>