force-app/main/default/objects/Parker_Pen__c/fields/f1__c.field-meta.xml
<CustomField>
    <fullName>f1__c</fullName>
    <formula>$Setup.Parker_Pen_c__c.asd__c</formula>
    <label>f1</label>
    <type>Text</type>
</CustomField>