force-app/main/default/objects/Parker_Pen__c/fields/Reg__c.field-meta.xml
<CustomField>
    <fullName>Reg__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Reg</label>
    <type>AutoNumber</type>
</CustomField>